# protocol-comparison

./: .gitignore  CLEANUP_RECOMMENDATIONS.md  CLEAN_ARCHITECTURE.md  DEPLOYMENT.md  MANIFEST.in  Makefile  Makefile.pure-dash  README_DASH.md  README_MODULAR.md  convert_data.py  dash_app.py  generate_sample_data.py  migrate_to_dash.py  modular_streamlit_app.py  pyproject.toml  readme.md  requirements.txt  run_streamlit.py  sample_selection.py  setup.py  streamlit_app.py  styles.css  test_consensus_dash.py  test_module_discovery.py  test_simple.py
.streamlit/: config.toml
modules/: __init__.py  base.py  consensus.py  coverage.py  dash_base.py  main.py  read_stats.py
modules/consensus/: __init__.py  dash_adapter.py  data.py  summary_stats.py  tab.py  visualizations.py
modules/coverage/: __init__.py  dash_adapter.py  data.py  summary_stats.py  tab.py  visualizations.py
modules/read_stats/: __init__.py  dash_adapter.py  streamlit_pages.py  tab.py
modules/read_stats/mapping/: summary_stats.py  visualizations.py
modules/read_stats/reads/: summary_stats.py
protocol_comparison/: __init__.py  app.py  cli.py  convert_data.py  sample_selection.py
protocol_comparison/modules/: __init__.py  streamlit_base.py
protocol_comparison/modules/consensus/: __init__.py  data.py  tab.py  visualizations.py
protocol_comparison/modules/coverage/: __init__.py  data.py  summary_stats.py  tab.py  visualizations.py
protocol_comparison/modules/read_stats/: tab.py
protocol_comparison/modules/read_stats/mapping/: __init__.py  summary_stats.py  visualizations.py
protocol_comparison/modules/read_stats/reads/: __init__.py  summary_stats.py  visualizations.py
sample_data/consensus/: ani_comparison.tsv  genome_recovery.tsv
sample_data/contamination/: hazv_contamination.tsv  lasv_contamination.tsv
sample_data/coverage/: coverage_summary.tsv
sample_data/depth/: sample_001.depth  sample_002.depth  sample_003.depth  sample_004.depth  sample_005.depth  sample_006.depth  sample_007.depth  sample_008.depth  sample_009.depth  sample_010.depth
sample_data/mapping/: mapping_stats.tsv
sample_data/read_stats/: read_counts.tsv  umi_stats.tsv
sample_data/references/: reference_mapping.tsv
streamlit_backup/: streamlit_app.py
