[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protocol-comparison"
version = "1.0.0"
authors = [
    {name = "Joon Klaps", email = "joon.klaps@example.com"},
]
description = "CLI and Streamlit dashboard for viral genomics protocol comparison"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["bioinformatics", "genomics", "viral", "streamlit", "dashboard", "analysis"]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.20.0,<2.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "openpyxl>=3.0.0",
    "xlsxwriter>=3.0.0",
    "streamlit>=1.28.0",
    "plotly>=5.15.0",
    "streamlit-option-menu>=0.3.6",
    "tqdm>=4.64.0",
    "pyarrow>=10.0.0",
    "AlignmentViewer @ git+https://github.com/Joon-Klaps/AlignmentViewer.git",
    "pyfamsa>=0.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/Joon-Klaps/protocol-comparison"
Repository = "https://github.com/Joon-Klaps/protocol-comparison"
Documentation = "https://github.com/Joon-Klaps/protocol-comparison/blob/main/README.md"
"Bug Reports" = "https://github.com/Joon-Klaps/protocol-comparison/issues"

[project.scripts]
protocol-comparison = "protocol_comparison.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["protocol_comparison*"]

[tool.setuptools.package-data]
"*" = ["*.css", "*.html", "*.js", "*.json", "*.yaml", "*.yml"]
"protocol_comparison" = ["**/*.py", "**/*.css", "**/*.html", "**/*.js"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true